# noot-tuner

./: .gitignore  .hgignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  STATUS  config.h.in  configure.ac  configure.in  reconfigure.sh  setup.iss  version.h.in
debian/: README  changelog  control  copyright  menu
doc/: Makefile.am
doc/en/: Makefile.am  gpl-3.2.sgml  noot-tuner-en.tex  noot-tuner.htb  noot-tuner.lyx  noot-tuner.xml  noot-tuner_mainwindow.con  tex2rtf.ini
doc/en/html/: ch01.html  ch01s02.html  ch01s03.html  ch01s04.html  ch02.html  ch03.html  ch04.html  ch04s02.html  ch04s03.html  ch05.html  ch06.html  htmlhelp.hhp  index.hhk  index.html  noot-tuner.con  noot-tuner.hhc  noot-tuner.hhk  noot-tuner.hhp  noot-tuner.htx  noot-tuner.ref  noot-tuner_changelog.html  noot-tuner_contents.html  noot-tuner_credits.html  noot-tuner_features.html  noot-tuner_gettingstarted.html  noot-tuner_howitworks.html  noot-tuner_introduction.html  noot-tuner_license-gplv3.html  noot-tuner_license.html  noot-tuner_mainwindow.html  noot-tuner_requirements.html  noot-tuner_using.html  toc.hhc
doc/it/: Makefile.am  gpl-3.0.tex  gpl-3.2.lyx  noot-tuner-it.tex  noot-tuner.htb  noot-tuner.lyx  noot-tuner.xml  noot-tuner_license-gplv3.con
doc/it/html/: ch01.html  ch01s02.html  ch01s03.html  ch01s04.html  ch02.html  ch03.html  ch04.html  ch04s02.html  ch04s03.html  ch05.html  ch06.html  htmlhelp.hhp  index.hhk  index.html  noot-tuner.con  noot-tuner.hhc  noot-tuner.hhk  noot-tuner.hhp  noot-tuner.htx  noot-tuner.ref  noot-tuner_changelog.html  noot-tuner_contents.html  noot-tuner_credits.html  noot-tuner_features.html  noot-tuner_howitworks.html  noot-tuner_introduction.html  noot-tuner_license.html  noot-tuner_mainwindow.html  noot-tuner_requirements.html  noot-tuner_using.html  toc.hhc
gub/gub/specs/: libice.py  libportaudio.py  libsm.py  libxft.py  noot-tuner.py  pangox.py  pangoxft.py  wxwidgets.py
gub/patches/: wxwidgets-2.8.11-spinctlg-1.patch
matlab/: PowerSpectrum1.m  PowerSpectrum2.m  PowerSpectrum3.m  RefineFrequency.m  default_options.m  test1.m
matlab-tests/: PowerSpectrum1.m  PowerSpectrum2.m  PowerSpectrum3.m  error-analysis.wxm  error-analysis2.wxm  error-analysis3.wxm
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  it.gmo  it.po  noot-tuner.pot
src/: Makefile.am  audio_file.cpp  audio_file.h  audio_portaudio.cpp  audio_portaudio.h  audioio.cpp  audioio.h  autocov.cpp  autocov.h  deviceselector.cpp  nogui.cpp  nogui.h  noot-tuner.cpp  noot-tuner.desktop  noot-tuner.h  notedetection.cpp  notedetection.h  options.cpp  options.h  pitchdetection.cpp  pitchdetection.h  powerspectrum.cpp  powerspectrum.h  res.rc  tunerframe.cpp  tunerframe.fpb  tunerframe.h  volumemeter.cpp  volumemeter.h  wxfbtunerframe.cpp  wxfbtunerframe.h
